--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "1.6.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
     "popper.js": "^1.14.3",
