--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "1.6.0",
     "ng2-file-upload": "^1.3.0",
+    "ng2-google-charts": "latest",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
     "popper.js": "^1.14.3",
@@ -51,8 +52,7 @@
     "rxjs": "6.1.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.26",
-    "ng2-google-charts": "latest"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
