--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.2",
+    "@angular-redux/store": "^9.0.0",
+    "@angular/animations": "^6.0.2",
     "@angular/common": "6.0.2",
     "@angular/compiler": "6.0.2",
     "@angular/core": "6.0.2",
@@ -22,16 +23,15 @@
     "@angular/platform-browser": "6.0.2",
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/router": "6.0.2",
-    "@angular-redux/store": "^9.0.0",
-    "@coreui/coreui": "^2.0.1",
     "@coreui/angular": "^2.0.0-rc.0",
+    "@coreui/coreui": "^2.0.1",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.1.1",
+    "@fortawesome/angular-fontawesome": "^0.1.0",
     "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
-    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@fortawesome/angular-fontawesome": "^0.1.0",
     "@ngx-pwa/local-storage": "^6.0.0-rc.1",
     "bootstrap": "^4.1.1",
     "chart.js": "2.7.2",
@@ -46,6 +46,7 @@
     "ng2-google-charts": "latest",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
+    "ngx-toastr": "^9.0.2",
     "node-sass": "^4.9.2",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
@@ -71,7 +72,7 @@
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.1.0",
-    "protractor": "5.3.2",
+    "protractor": "^5.4.0",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
     "typescript": "2.7.2"
