--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jquery": "^3.3.1",
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
+    "ng-pick-datetime": "^5.2.6",
     "ng2-charts": "1.6.0",
     "ng2-file-upload": "^1.3.0",
     "ng2-google-charts": "latest",
@@ -51,7 +52,7 @@
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
     "redux-observable": "0.14.1",
-    "rxjs": "6.1.0",
+    "rxjs": "^6.1.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.26"
@@ -67,7 +68,7 @@
     "codelyzer": "4.3.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
