--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "core-js": "2.5.6",
     "flag-icon-css": "3.0.0",
     "jquery": "^3.3.1",
+    "js-sha256": "^0.9.0",
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
     "ng-pick-datetime": "^5.2.6",
