--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@ngx-pwa/local-storage": "^6.0.0-rc.1",
+    "angularx-qrcode": "^1.2.4",
     "bootstrap": "^4.1.1",
     "chart.js": "2.7.2",
     "codice-fiscale-js": "^1.3.0",
