--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/router": "6.0.2",
     "@coreui/angular": "^2.0.0-rc.0",
-    "@coreui/coreui": "^2.0.1",
+    "@coreui/coreui": "^2.0.20",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.1.1",
-    "@fortawesome/angular-fontawesome": "^0.1.0",
+    "@fortawesome/angular-fontawesome": "^0.1.1",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0",
-    "@ngx-pwa/local-storage": "^6.0.0-rc.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@ngx-pwa/local-storage": "^6.1.1",
     "angularx-qrcode": "^1.2.4",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "chart.js": "2.7.2",
     "codice-fiscale-js": "^1.3.0",
     "core-js": "2.5.6",
@@ -49,18 +49,18 @@
     "ng2-google-charts": "latest",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
-    "ngx-toastr": "^9.0.2",
-    "node-sass": "^4.9.2",
-    "popper.js": "^1.14.3",
-    "redux": "^4.0.0",
+    "ngx-toastr": "^9.1.0",
+    "node-sass": "^4.9.4",
+    "popper.js": "^1.14.4",
+    "redux": "^4.0.1",
     "redux-observable": "0.14.1",
-    "rxjs": "^6.1.0",
+    "rxjs": "^6.3.3",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.3",
+    "@angular-devkit/build-angular": "^0.6.8",
     "@angular/cli": "6.0.3",
     "@angular/compiler-cli": "6.0.2",
     "@angular/language-service": "6.0.2",
@@ -75,7 +75,7 @@
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.1.0",
-    "protractor": "^5.4.0",
+    "protractor": "^5.4.1",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
     "typescript": "2.7.2"
