--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,10 @@
               "node_modules/flag-icon-css/css/flag-icon.css",
               "node_modules/simple-line-icons/css/simple-line-icons.css",
               "src/scss/style.scss",
-              "node_modules/ngx-toastr/toastr.css"],
+              "node_modules/ngx-toastr/toastr.css",
+              // "node_modules/flatpickr/dist/flatpickr.css",
+              "node_modules/flatpickr/dist/flatpickr.min.css"
+            ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
               "node_modules/jquery/dist/jquery.js",
