--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@ngx-pwa/local-storage": "^6.1.1",
+    "angularx-flatpickr": "^6.1.0",
     "angularx-qrcode": "^1.2.4",
     "bootstrap": "^4.1.3",
     "chart.js": "2.7.2",
     "codice-fiscale-js": "^1.3.0",
     "core-js": "2.5.6",
     "flag-icon-css": "3.0.0",
+    "flatpickr": "^4.5.2",
     "jquery": "^3.3.1",
     "js-sha256": "^0.9.0",
     "moment": "2.22.1",
@@ -46,6 +48,7 @@
     "ng-pick-datetime": "^5.2.6",
     "ng2-charts": "1.6.0",
     "ng2-file-upload": "^1.3.0",
+    "ng2-flatpickr": "^6.0.2",
     "ng2-google-charts": "latest",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
