--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng:build"
+            "browserTarget": "ng:build",
+            "port": 4200,
+            "host": "0.0.0.0"
 
 
           },
