--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ng2-flatpickr": "^6.0.2",
     "ng2-google-charts": "latest",
     "ngx-bootstrap": "3.0.0",
+    "ngx-paypal": "^3.2.1",
     "ngx-perfect-scrollbar": "6.1.0",
     "ngx-toastr": "^9.1.0",
     "node-sass": "^4.9.4",
