--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@angular/cli": "6.0.3",
     "@angular/compiler-cli": "6.0.2",
     "@angular/language-service": "6.0.2",
+    "@types/googlemaps": "^3.30.16",
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "10.1.2",
