--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@ng-select/ng-select": "^2.16.0",
     "@ngx-pwa/local-storage": "^6.1.1",
     "@zxing/library": "^0.8.3",
     "@zxing/ngx-scanner": "^1.3.0",
@@ -56,7 +57,7 @@
     "ngx-paypal": "^3.2.1",
     "ngx-perfect-scrollbar": "6.1.0",
     "ngx-toastr": "^9.1.0",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.11.0",
     "popper.js": "^1.14.4",
     "redux": "^4.0.1",
     "redux-observable": "0.14.1",
@@ -66,7 +67,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular-devkit/build-angular": "^0.13.4",
     "@angular/cli": "6.0.3",
     "@angular/compiler-cli": "6.0.2",
     "@angular/language-service": "6.0.2",
