--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "ng2-flatpickr": "^6.0.2",
     "ng2-google-charts": "latest",
     "ngx-bootstrap": "3.0.0",
-    "ngx-paypal": "^3.2.1",
+    "ngx-loading": "^3.0.1",
+    "ngx-paypal": "^5.0.0-beta.6",
     "ngx-perfect-scrollbar": "6.1.0",
     "ngx-toastr": "^9.1.0",
     "node-sass": "^4.11.0",
