--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "core-js": "2.5.6",
     "flag-icon-css": "3.0.0",
     "flatpickr": "^4.5.2",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "js-sha256": "^0.9.0",
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
@@ -53,11 +53,12 @@
     "ng2-file-upload": "^1.3.0",
     "ng2-flatpickr": "^6.0.2",
     "ng2-google-charts": "latest",
+    "ng2-search-filter": "^0.4.7",
     "ngx-bootstrap": "3.0.0",
     "ngx-loading": "^3.0.1",
     "ngx-perfect-scrollbar": "6.1.0",
     "ngx-toastr": "^9.1.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "popper.js": "^1.14.4",
     "redux": "^4.0.1",
     "redux-observable": "0.14.1",
@@ -67,9 +68,9 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.4",
-    "@angular/cli": "6.0.3",
-    "@angular/compiler-cli": "6.0.2",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "6.0.2",
     "@types/googlemaps": "^3.30.16",
     "@types/jasmine": "2.8.7",
@@ -78,7 +79,7 @@
     "codelyzer": "4.3.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
