--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "js-sha256": "^0.9.0",
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
+    "ng-click-outside": "^4.0.0",
     "ng-pick-datetime": "^5.2.6",
     "ng2-charts": "1.6.0",
     "ng2-file-upload": "^1.3.0",
@@ -87,7 +88,7 @@
     "protractor": "^5.4.1",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
-    "typescript": "2.7.2"
+    "typescript": "3.1.1"
   },
   "engines": {
     "node": ">= 8.9.4",
