--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "6.0.2",
     "@types/googlemaps": "^3.30.16",
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
@@ -88,7 +87,7 @@
     "protractor": "^5.4.1",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
-    "typescript": "3.1.1"
+    "typescript": "^3.1.1"
   },
   "engines": {
     "node": ">= 8.9.4",
