--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@ng-select/ng-select": "^2.16.0",
     "@ngx-pwa/local-storage": "^6.1.1",
+    "@types/lodash": "^4.14.133",
     "@zxing/library": "^0.8.3",
     "@zxing/ngx-scanner": "^1.3.0",
     "angularx-flatpickr": "^6.1.0",
