--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@zxing/ngx-scanner": "^1.3.0",
     "angularx-flatpickr": "^6.1.0",
     "angularx-qrcode": "^1.2.4",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "chart.js": "2.7.2",
     "codice-fiscale-js": "^1.3.0",
     "core-js": "2.5.6",
@@ -53,7 +53,7 @@
     "ng2-charts": "1.6.0",
     "ng2-file-upload": "^1.3.0",
     "ng2-flatpickr": "^6.0.2",
-    "ng2-google-charts": "latest",
+    "ng2-google-charts": "^4.0.0",
     "ng2-search-filter": "^0.4.7",
     "ngx-bootstrap": "3.0.0",
     "ngx-loading": "^3.0.1",
