--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "@angular-redux/store": "^9.0.0",
     "@angular/animations": "^7.0.0",
     "@angular/cdk": "^7.0.0",
-    "@angular/common": "7.0.0",
-    "@angular/compiler": "7.0.0",
-    "@angular/core": "7.0.0",
-    "@angular/forms": "7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "^7.0.0",
     "@angular/material": "^7.0.0",
-    "@angular/platform-browser": "7.0.0",
-    "@angular/platform-browser-dynamic": "7.0.0",
-    "@angular/router": "7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/router": "^7.0.0",
     "@coreui/angular": "^2.0.0-rc.0",
-    "@coreui/coreui": "^2.0.20",
+    "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.1.1",
     "@fortawesome/angular-fontawesome": "^0.1.1",
