--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@ng-select/ng-select": "^2.16.0",
     "@ngx-pwa/local-storage": "^6.1.1",
-    "@types/lodash": "^4.14.133",
     "@zxing/library": "^0.8.3",
     "@zxing/ngx-scanner": "^1.3.0",
     "angularx-flatpickr": "^6.1.0",
@@ -48,6 +47,7 @@
     "flatpickr": "^4.5.2",
     "jquery": "^3.4.1",
     "js-sha256": "^0.9.0",
+    "lodash": "^4.17.13",
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
     "ng-click-outside": "^4.0.0",
@@ -77,6 +77,7 @@
     "@types/googlemaps": "^3.30.16",
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
+    "@types/lodash": "^4.14.133",
     "@types/node": "10.1.2",
     "codelyzer": "5.1.0",
     "jasmine-core": "3.1.0",
