--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@coreui/icons": "^0.1.1",
     "@fortawesome/angular-fontawesome": "^0.1.1",
     "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
