--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "ngx-perfect-scrollbar": "6.1.0",
     "ngx-toastr": "^10.0.4",
     "node-sass": "^4.12.0",
+    "pdfmake": "^0.1.60",
+    "pdfmake-wrapper": "^2.0.0",
     "popper.js": "^1.14.4",
     "redux": "^4.0.1",
     "redux-observable": "0.14.1",
