--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/quill/dist/quill.min.js"
             ]
           },
           "configurations": {
