--- a/package.json
+++ b/package.json
@@ -62,11 +62,14 @@
     "ngx-loading": "^3.0.1",
     "ngx-paypal": "^5.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
+    "ngx-quill": "^8.1.7",
     "ngx-toastr": "^10.0.4",
     "node-sass": "^4.12.0",
     "pdfmake": "^0.1.60",
     "pdfmake-wrapper": "^2.0.0",
     "popper.js": "^1.14.4",
+    "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
     "redux": "^4.0.1",
     "redux-observable": "0.14.1",
     "rxjs": "^6.3.3",
