--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -8,7 +8,10 @@
     "paths": {
       "@angular/*": [
         "../node_modules/@angular/*"
-      ]
+      ],
+      "ngx-quill": ["../node_modules/ngx-quill/bundles/ngx-quill.umd.js"],
+      "quill": ["../node_modules/quill/dist/quill.js"]
+
     }
   },
   "exclude": [
