--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "ngx-loading": "^3.0.1",
     "ngx-paypal": "^5.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
-    "ngx-quill": "^8.1.7",
+    "ngx-quill": "9.2.0",
     "ngx-toastr": "^10.0.4",
     "node-sass": "^4.12.0",
     "pdfmake": "^0.1.60",
