[fix] fix live paypal

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "ng2-search-filter": "^0.4.7",
     "ngx-bootstrap": "3.0.0",
     "ngx-loading": "^3.0.1",
-    "ngx-paypal": "^5.0.0",
+    "ngx-paypal": "5.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
     "ngx-quill": "9.2.0",
     "ngx-toastr": "^10.0.4",
